# adalchemy

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
assets/flask_templates/templates/: index.html
src/: constants.py  generator.py  utils.py
